no more config.json file

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 Log all using log instead of fmt.
 Log num of products changed.
 
-Scrit to remove not used categories from db.
+Scrit to remove not used min and max price from db.
+remove money and use *100 for money.
