--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 Log all using log instead of fmt.
 Log num of products changed.
 
-Scrit to remove not used min and max price from db.
+Script to remove not used min and max price from db.
 remove money and use *100 for money.
+
+Remove products when no more in the Aldo.
